# FastOpenGLUI

./: CMakeLists.txt  README.md
include/: SDK360.h  archive.h  archive_entry.h
include/FastOpenGLUI/: CommonFunc.h  FOGLProgressBar.h  FOGLRectangle.h  FOGLWindow.h  Timer.h  camera.h  mesh.h  model.h  regeditFunction.h  resource.h  shader.h  soft_info.h  text_renderer.h  texture.h
lib/: bz2.lib  lz4.lib  lzma.lib  zlib.lib
lib/MSVC/debug/: freetyped.lib  glfw3.lib
lib/MSVC/release/: freetype.lib  glfw3.lib
resources/: Install.rc  Uninstall.rc  app.rc  resources.rc
src/: CommonFunc.cpp  CommonFunc.h  MainWindow.cpp  MainWindow.h  main.cpp  resources.h
src/Component/: CommonFunc.cpp  FOGL.rc  FOGLProgressBar.cpp  FOGLRectangle.cpp  FOGLRectangle.h  FOGLWindow.cpp  Timer.cpp  regeditFunction.cpp  shader.h  text_renderer.cpp  text_renderer.h  texture.cpp
src/InstallWindow/: CMakeLists.txt  Install.cpp  InstallResources.h  InstallWindow.cpp  InstallWindow.h
src/UninstallWindow/: CMakeLists.txt  Uninstall.cpp  UninstallResources.h  UninstallWindow.cpp  UninstallWindow.h
src/regeditModel/: reg_info.h  regeditFunction.h  sign_info.h
src/test/: CMakeLists.txt  main.cpp
